# books-sql

./: .env_example  .gitignore  Dockerfile  docker-compose.yml  dockerfile.dbt  prefect.yaml  pyproject.toml  requirements.txt  setup.py
dbt/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
docs/: catalog.json  manifest.json
notebooks/: 01_initial_load.ipynb  01_initial_sql_load.ipynb  02_eda.ipynb  02_sql_load.ipynb
scripts/: dbt_docs.bat
sql/: staging_schema.sql  terminate_backend_sessions.sql
sql/sql_cleanup/: cleanup_staging.sql
sql/sql_create/: 02_db_create.sql  03_schema.sql  04_schema_drop.sql  04_staging_schema.sql  05_quarantine_schema.sql  05_schema.sql  06_staging_drop.sql  07_staging_schema.sql  08_quarantine_drop.sql  09_quarantine_schema.sql  db_drop.sql  quarantine_schema.sql  staging_schema.sql
sql/sql_indexes/: 01_books_indexes.sql  01_main_indexes.sql  02_ratings_indexes.sql  03_audit_log_indexes.sql  idx_audit_log.sql  idx_books.sql  idx_ratings.sql
sql/sql_load/: 01_load_staging.sql  02_load_authors.sql  03_load_publishers.sql  04_load_books.sql  05_load_books.sql  06_load_ratings.sql  06_load_users.sql  07_load_users.sql
sql/sql_select/: average_rating.sql
sql/sql_tables/: 01_schema.sql  02_raw_schema.sql  03_quarantine_schema.sql  schema.sql
sql/sql_triggers/: 01_fn_audit_log.sql  01_func_audit_log.sql  02_trg_audit_log.sql
src/: config.py  db.py  db_setup.py  download_data.py  logger.py  pipeline.py  setup_db.py  sql_execute.py  validate.py
src/config/: constants.py  sql.py  (+1 more)
(+19 files in other folders)
