[project]
name = "books-sql"
version = "0.0.1"
authors = [
    { name = "zxc0.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0,<3",
    "missingno>=0.5,<1",
    "kagglehub>=1.0,<2",
    "jupyter>=1.1,<2",
    "ipykernel>=6.29,<7",
    "jupysql>=0.3,<1",
    "sqlalchemy>=2.0,<3",
    "ipython-sql",
    "pgspecial",
    "psycopg2-binary",
    "python-dotenv",
]
 
[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]
 
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
 
[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sql = ["**/*.sql"]